examples/test/testpolicy10362.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10362
  namespace: namespace191
spec:
  podSelector:
    matchLabels:
      key8: value25
      key28: value44
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value3
          key48: value21
          key31: value28
      podSelector:
        matchLabels:
          key37: value24
          key0: value28
